crates/test-files/fixtures/compile_errors/emit_bad_args.fe
contract Bar:
  event Foo:
    idx x: address
    y: u256
    z: bool

  pub def test():
    emit Foo((1, 2), z=10, y=true, x=5)